--- a/index.html
+++ b/index.html
@@ -83,6 +83,7 @@ img {
 <div id="executive-summary" class="section level1">
 <h1><span class="header-section-number">1</span> Executive Summary</h1>
 <p>We set out to find whether value investing strategy such as Joel Greenblatt’s earning yields and Piotroski’s F-score can actually beat the Thai stock market. The fundamental data are obtained from <a href="http://gurufocus.com">Gurufocus</a> while the benchmark SET TRI is obtained from <a href="http://set.or.th">Stock Exchange of Thailand</a>. We perform support vector machine, boosted logistic regression and random forest classification based on the data, as well as a backtest to verify the models. Most our models perform better than a coin toss with random forest achieving the highest accuracy and sensitivity of 85.13% and 79.25% respectively (20.08% annual return).</p>
+<p>Visit our github respository <a href="https://github.com/cstorm125/value/">here</a></p>
 </div>
 <div id="data-processing" class="section level1">
 <h1><span class="header-section-number">2</span> Data Processing</h1>
